--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -44,35 +44,49 @@
             Angular map built with twitter api and d3
           </p>
         </div>
-        <span class="glyphicon glyphicon-info-sign" ></span>
-
-
-        <!-- <span class="glyphicon glyphicon-link" ng-show="'toolBar'"></span>
-        <span class="glyphicon glyphicon-remove" ng-show="'toolBar'" ng-click="hideToolBar()"></span>
-        <span class="glyphicon glyphicon-info-sign" ng-hide="'info'" ng-click="showToolBar()"></span> -->
       </a>
+      <div ng-show="is_touch_device()" class="touchOnly">
+        <span class="glyphicon glyphicon-link" ng-show="toolBar"></span>
+        <span class="glyphicon glyphicon-remove" ng-show="toolBar" ng-click="hideToolBar()"></span>
+        <span class="glyphicon glyphicon-info-sign" ng-hide="infoSign" ng-click="showToolBar()"></span>
+      </div>
     </div>
     <div flex="33" flex-sm="50" flex-xs="100" class="projectsDiv ">
-      <img src="./images/pizza.png" alt="" />
-      <div class="intro">
-        <h2>Pizza Menu</h2>
-        <p>
-          Built with MEAN stack
-        </p>
+      <a href="https://angularpizzaplanet.herokuapp.com/">
+        <img src="./images/pizza.png" alt="" />
+        <div class="intro">
+          <h2>Pizza Menu</h2>
+          <p>
+            Built with MEAN stack
+          </p>
+        </div>
+      </a>
+
+      <div ng-show="is_touch_device()" class="touchOnly">
+        <span class="glyphicon glyphicon-link" ng-show="toolBar"></span>
+        <span class="glyphicon glyphicon-remove" ng-show="toolBar" ng-click="hideToolBar()"></span>
+        <span class="glyphicon glyphicon-info-sign" ng-hide="infoSign" ng-click="showToolBar()"></span>
       </div>
-      <span class="glyphicon glyphicon-info-sign"></span>
-      <!-- <span class="glyphicon glyphicon-info-sign"></span> -->
+
     </div>
     <div flex="33" flex-sm="50" flex-xs="100" class="projectsDiv">
-      <img src="./images/stories.png" alt="" />
-      <div class="intro">
-        <h2>Stories Time</h2>
-        <p>
-          Jquery play ground
-        </p>
+      <a href="https://thawing-cliffs-53689.herokuapp.com/">
+        <img src="./images/stories.png" alt="" />
+        <div class="intro">
+          <h2>Stories Time</h2>
+          <p>
+            Jquery play ground
+          </p>
+        </div>
+      </a>
+
+      <div ng-show="is_touch_device()" class="touchOnly">
+        <span class="glyphicon glyphicon-link" ng-show="toolBar"></span>
+        <span class="glyphicon glyphicon-remove" ng-show="toolBar" ng-click="hideToolBar()"></span>
+        <span class="glyphicon glyphicon-info-sign" ng-hide="infoSign" ng-click="showToolBar()"></span>
       </div>
-      <span class="glyphicon glyphicon-info-sign"></span>
     </div>
+
     <div flex="33" flex-sm="50" flex-xs="100" class="projectsDiv">
       <img src="./images/pawesome.png" alt="" />
       <div class="intro">
@@ -81,21 +95,11 @@
           Rails app
         </p>
       </div>
-      <span class="glyphicon glyphicon-info-sign"></span>
+      <div ng-show="is_touch_device()" class="touchOnly">
+        <span class="glyphicon glyphicon-link" ng-show="toolBar"></span>
+        <span class="glyphicon glyphicon-remove" ng-show="toolBar" ng-click="hideToolBar()"></span>
+        <span class="glyphicon glyphicon-info-sign" ng-hide="infoSign" ng-click="showToolBar()"></span>
+      </div>
     </div>
-
-    <!-- <a flex="32" flex-xs="100" class="projectsDiv">
-      <img src="./images/stories.png" alt="" />
-      <span class="glyphicon glyphicon-info-sign"></span>
-    </a>
-    <a flex="32" flex-xs="100" class="projectsDiv">
-      <img src="./images/stories.png" alt="" />
-      <span class="glyphicon glyphicon-info-sign"></span>
-    </a>
-    <a flex="32" flex-xs="100" class="projectsDiv">
-      <img src="./images/stories.png" alt="" />
-      <span class="glyphicon glyphicon-info-sign"></span>
-    </a> -->
-
   </div>
 </div>
