--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -4,11 +4,27 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 // endbower
 
 .mainWrap {
-  width: 97%;
+  width: 98%;
   margin: 0 auto;
   box-sizing: border-box;
 }
 
+.header {
+  width: 80%;
+  margin: 0 auto;
+  .headline {
+    margin-top: 40px;
+  }
+  .content {
+    font-size: 25px;
+    font-weight: bold;
+  }
+}
+
+
+.projectsWrap {
+  margin-top: 20px;
+}
 .projectsDiv {
   // border: 1px solid red;
   // width: 300px;
@@ -66,81 +82,5 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
     opacity: 0.9;
 
     font-weight: bold;
-  }
-}
-
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-/* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
-  margin-bottom: 10px;
-
-  /* Make the masthead heading the same height as the navigation */
-  h3 {
-    margin-top: 0;
-    margin-bottom: 0;
-    line-height: 40px;
-    padding-bottom: 19px;
-  }
-}
-
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
-}
-
-.container-narrow > hr {
-  margin: 30px 0;
-}
-
-/* Main marketing message and sign up button */
-.jumbotron {
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-
-  .btn {
-    font-size: 21px;
-    padding: 14px 24px;
-  }
-}
-
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-
-  p + h4 {
-    margin-top: 28px;
-  }
-}
-
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
-
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
   }
 }
