--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -22,18 +22,22 @@
   <p>Spectacular Test Runner for JavaScript.</p>
 </div> -->
 <div class="mainWrap">
-  <div class="">
-    <h1>Hello &Welcome</h1>
-    <p>
-      My Name Jing Wait. I am an aspiring full stack web developer. I love living in browers' world, how rewarding a career in the behind techlodgies can be!
-    </p>
-    <p>
-      Below are some of pets projects I have been working on.
-    </p>
+  <div class="" layout="column" layout-wrap>
+    <div class="header headline">
+      <h3>Hello & Welcome</h1>
+    </div>
+    <div class="header content" >
+      <p>
+        My Name Jing Wait. I am an aspiring full stack web developer. As a person who love living in browers' world, how rewarding a career in the behind techlodgies can be!
+      </p>
+      <p>
+        Below are some of pets projects I have been working on.
+      </p>
+    </div>
 
   </div>
 
-  <div layout="row"  layout-wrap class="">
+  <div layout="row" layout-wrap class="projectsWrap">
   <!-- <div layout="row" layout-wrap layout-xs="column" layout-margin class=""> -->
     <div flex="33" flex-sm="50" flex-xs="100" class="projectsDiv">
       <a  href="https://twittersearchmap.herokuapp.com/">
