--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -68,19 +68,21 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
     font-size: 300%;
   }
 }
+.nonTouchDevice {
 
-.projectsDiv:hover {
-  // background-color: #0000ff;
-  // opacity: 0.7;
-  // z-index: 90;
-  // .img {
-  //   background-color: #00ffff;
-  // }
-  .intro {
-    display: inline-block;
-    background-color: #003366;
-    opacity: 0.9;
+  .projectsDiv:hover {
+    // background-color: #0000ff;
+    // opacity: 0.7;
+    // z-index: 90;
+    // .img {
+    //   background-color: #00ffff;
+    // }
+    .intro {
+      display: inline-block;
+      background-color: #003366;
+      opacity: 0.9;
 
-    font-weight: bold;
+      font-weight: bold;
+    }
   }
 }
