replace hover style with click style when on touch screen

--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -43,7 +43,7 @@
     <div flex="33" flex-sm="50" flex-xs="100" class="projectsDiv">
       <a  href="https://twittersearchmap.herokuapp.com/">
         <img src="./images/twittersearch.png" alt="" />
-        <div class="intro">
+        <div ng-class="{intro: !is_touch_device, introTouchDeviceHide: is_touch_device, introTouchDeviceShow: is_touch_device && introShow1}">
           <h2>Twitter Search API</h2>
           <p>
             Angular map built with twitter api and d3
@@ -52,14 +52,14 @@
       </a>
       <div ng-show="is_touch_device" class="touchOnly" >
         <span class="glyphicon glyphicon-link" ng-show="toolBar1"></span>
-        <span class="glyphicon glyphicon-remove" ng-show="toolBar1" ng-click="toolBar1 = false; infoSign1 = false"></span>
-        <span class="glyphicon glyphicon-info-sign" ng-hide="infoSign1" ng-click="toolBar1 = true; infoSign1 = true"></span>
+        <span class="glyphicon glyphicon-remove" ng-show="toolBar1" ng-click="toolBar1 = false; infoSign1 = false; introShow1 = false"></span>
+        <span class="glyphicon glyphicon-info-sign" ng-hide="infoSign1" ng-click="toolBar1 = true; infoSign1 = true; introShow1 = true"></span>
       </div>
     </div>
     <div flex="33" flex-sm="50" flex-xs="100" class="projectsDiv ">
       <a href="https://angularpizzaplanet.herokuapp.com/">
         <img src="./images/pizza.png" alt="" />
-        <div class="intro">
+        <div  ng-class="{intro: !is_touch_device, introTouchDeviceHide: is_touch_device, introTouchDeviceShow: is_touch_device && introShow2}">
           <h2>Pizza Menu</h2>
           <p>
             Built with MEAN stack
@@ -69,15 +69,15 @@
 
       <div ng-show="is_touch_device" class="touchOnly">
         <span class="glyphicon glyphicon-link" ng-show="toolBar2"></span>
-        <span class="glyphicon glyphicon-remove" ng-show="toolBar2" ng-click="toolBar2 = false; infoSign2 = false"></span>
-        <span class="glyphicon glyphicon-info-sign" ng-hide="infoSign2" ng-click="toolBar2 = true; infoSign2 = true"></span>
+        <span class="glyphicon glyphicon-remove" ng-show="toolBar2" ng-click="toolBar2 = false; infoSign2 = false; introShow2 = false"></span>
+        <span class="glyphicon glyphicon-info-sign" ng-hide="infoSign2" ng-click="toolBar2 = true; infoSign2 = true; introShow2 = true"></span>
       </div>
 
     </div>
     <div flex="33" flex-sm="50" flex-xs="100" class="projectsDiv">
       <a href="https://thawing-cliffs-53689.herokuapp.com/">
         <img src="./images/stories.png" alt="" />
-        <div class="intro">
+        <div ng-class="{intro: !is_touch_device, introTouchDeviceHide: is_touch_device, introTouchDeviceShow: is_touch_device && introShow3}">
           <h2>Stories Time</h2>
           <p>
             Jquery play ground
@@ -87,14 +87,14 @@
 
       <div ng-show="is_touch_device" class="touchOnly">
         <span class="glyphicon glyphicon-link" ng-show="toolBar3"></span>
-        <span class="glyphicon glyphicon-remove" ng-show="toolBar3" ng-click="toolBar3 = false; infoSign3 = false"></span>
-        <span class="glyphicon glyphicon-info-sign" ng-hide="infoSign3" ng-click="toolBar3 = true; infoSign3 = true"></span>
+        <span class="glyphicon glyphicon-remove" ng-show="toolBar3" ng-click="toolBar3 = false; infoSign3 = false; introShow3 = false"></span>
+        <span class="glyphicon glyphicon-info-sign" ng-hide="infoSign3" ng-click="toolBar3 = true; infoSign3 = true; introShow3 = true"></span>
       </div>
     </div>
 
     <div flex="33" flex-sm="50" flex-xs="100" class="projectsDiv">
       <img src="./images/pawesome.png" alt="" />
-      <div class="intro">
+      <div ng-class="{intro: !is_touch_device, introTouchDeviceHide: is_touch_device, introTouchDeviceShow: is_touch_device && introShow4}">
         <h2>Pawesome Care</h2>
         <p>
           Rails app
@@ -102,8 +102,8 @@
       </div>
       <div ng-show="is_touch_device" class="touchOnly">
         <span class="glyphicon glyphicon-link" ng-show="toolBar4"></span>
-        <span class="glyphicon glyphicon-remove" ng-show="toolBar4" ng-click="toolBar4 = false; infoSign4 = false"></span>
-        <span class="glyphicon glyphicon-info-sign" ng-hide="infoSign4" ng-click="toolBar4 = true; infoSign4 = true"></span>
+        <span class="glyphicon glyphicon-remove" ng-show="toolBar4" ng-click="toolBar4 = false; infoSign4 = false; introShow4 = false"></span>
+        <span class="glyphicon glyphicon-info-sign" ng-hide="infoSign4" ng-click="toolBar4 = true; infoSign4 = true; introShow4 = true"></span>
       </div>
     </div>
   </div>
