--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -26,20 +26,13 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
   margin-top: 20px;
 }
 .projectsDiv {
-  // border: 1px solid red;
-  // width: 300px;
-  // height: 300px;
-  // padding-right: 5px;
   padding: 3px;
   position: relative;
   .touchOnly {
     position: absolute;
     right: 30px;
     bottom: 30px;
-    // span {
-    //   background-color: #d9d9d9;
-    //   opacity: 0.4;
-    // }
+
   }
   .intro{
     position: absolute;
@@ -58,30 +51,40 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
     width: 100%;
     height: 100%;
   }
-  // span{
-  //   position: absolute;
-  //   right: 20px;
-  //   bottom: 20px;
-  // }
 
   .glyphicon {
     font-size: 300%;
   }
 }
+
+// replace hover state style with clict even style
+.introTouchDeviceHide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  font-size: 20px;
+  color: white;
+  display: none;
+  padding: 80px 20px;
+}
+.introTouchDeviceShow {
+  display: inline-block;
+  background-color: #003366;
+  opacity: 0.9;
+  font-weight: bold;
+}
+
+//add hover state on desktop
 .nonTouchDevice {
 
   .projectsDiv:hover {
-    // background-color: #0000ff;
-    // opacity: 0.7;
-    // z-index: 90;
-    // .img {
-    //   background-color: #00ffff;
-    // }
+
     .intro {
       display: inline-block;
       background-color: #003366;
       opacity: 0.9;
-
       font-weight: bold;
     }
   }
