--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -96,7 +96,7 @@
       </div>
     </div>
 
-    <div flex="33" flex-sm="50" flex-xs="100" class="projectsDiv">
+    <!-- <div flex="33" flex-sm="50" flex-xs="100" class="projectsDiv">
       <img src="./images/pawesome.png" alt="" />
       <div ng-class="{intro: !is_touch_device, introTouchDeviceHide: is_touch_device, introTouchDeviceShow: is_touch_device && introShow4}">
         <h2>Pawesome Care</h2>
@@ -109,6 +109,25 @@
         <span class="glyphicon glyphicon-remove" ng-show="toolBar4" ng-click="toolBar4 = false; infoSign4 = false; introShow4 = false"></span>
         <span class="glyphicon glyphicon-info-sign" ng-hide="infoSign4" ng-click="toolBar4 = true; infoSign4 = true; introShow4 = true"></span>
       </div>
+    </div> -->
+  </div>
+
+<!-- //footer where stay social -->
+  <div class="footer" layout='column'>
+    <div class="contact" layout="row" layout-wrap>
+      <div class="" flex='25' flex-xs='50'>
+        <a href="mailto:jingzhaowait@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+      </div>
+      <div class="" flex='25' flex-xs='50'>
+        <a href="https://github.com/lovedoodle"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
+      </div>
+      <div class="" flex='25' flex-xs='50'>
+        <a href="https://www.instagram.com/jing.wait/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+      </div>
+      <div class="" flex='25' flex-xs='50'>
+        <a href="https://twitter.com/JingWait"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+      </div>
     </div>
+
   </div>
 </div>
