--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -116,7 +116,7 @@
   <div class="footer" layout='column'>
     <div class="contact" layout="row" layout-wrap>
       <div class="" flex='25' flex-xs='50'>
-        <a href="mailto:jingzhaowait@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+        <a href="mailto:jingzhaowait@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
       </div>
       <div class="" flex='25' flex-xs='50'>
         <a href="https://github.com/lovedoodle"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
