add portfolio link

--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -1,45 +1,22 @@
-<!-- <div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
-
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
-</div> -->
 <div class="mainWrap" ng-class="{nonTouchDevice: !is_touch_device}">
   <div class="header" layout="column" layout-wrap>
     <div class="headline">
       <h1>Hello & Welcome</h1>
     </div>
-    <div class="content" >
+    <div class="content">
       <p>
-        My Name Jing Wait. I am an aspiring full stack web developer. As a person who loves living in browers' world, how rewarding a career behind the web techlodgies can be!
+        My name Jing Wait. I am an aspiring full stack web developer.
+        As a person who loves living in browers' world,
+        I can bring a well rounded asset to your team that can fill any technical need you may have.
       </p>
       <p>
-        I am passionate about great design and writing javascripts code. Please take a look at my <a href="https://drive.google.com/file/d/0B6k_CGkGW3O1eGpKMmhvRkhWOFE/view?usp=sharing">Resume</a> and <a href="https://github.com/lovedoodle">Github repos</a>.
+        I am passionate about great design and writing Javascript and Ruby.
+        Please take a look at my <a href="https://drive.google.com/file/d/0B6k_CGkGW3O1eGpKMmhvRkhWOFE/view?usp=sharing">Resume</a> and <a href="https://github.com/lovedoodle">Github repo</a> for some examples of my work.
       </p>
-
       <p>
-        Below are some of pets projects I have done with Angular, Node, RESTful API.
+        Below are some pet projects I have done with AngularJS, NodeJS, and Express based APIs.
       </p>
-
     </div>
-
   </div>
 
   <div layout="row" layout-wrap class="projectsWrap">
@@ -79,12 +56,12 @@
 
     </div>
     <div flex="33" flex-sm="50" flex-xs="100" class="projectsDiv">
-      <a href="https://angularmaterialportfolio.herokuapp.com/#/">
+      <a href="https://hirejing.herokuapp.com/#/">
         <img src="./images/stories.png" alt="" />
         <div ng-class="{intro: !is_touch_device, introTouchDeviceHide: is_touch_device, introTouchDeviceShow: is_touch_device && introShow3}">
           <h2>Angular Material Portfolio</h2>
           <p>
-            Jquery play ground
+            A responsive portfolio site done with the Angular Material framework.
           </p>
         </div>
       </a>
