--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -11,18 +11,23 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
   width: 100%;
   margin: 0;
   box-sizing: border-box;
+  font-family: 'Nunito', sans-serif;
 }
+
+
 //header style
 .header {
-  width: 80%;
-  margin: 50px auto 30px auto;
-  color: #262626;
+  width: 70%;
+  margin: 50px auto 40px auto;
+  color: #333333;
   .headline {
 
   }
   .content p {
-    font-size: 20px;
+    font-size: 22px;
     font-weight: bolder;
+    // background: white;
+    // opacity: 1;
   }
 }
 
