--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -9,17 +9,19 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 
 .mainWrap {
   width: 100%;
-  margin: 0;
+  margin: auto;
   box-sizing: border-box;
   font-family: 'Nunito', sans-serif;
+
 }
 
 
 //header style
 .header {
-  width: 70%;
+  width: 90%;
   margin: 50px auto 40px auto;
   color: #333333;
+  max-width: 800px;
   .headline {
 
   }
@@ -121,7 +123,8 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
   background: linear-gradient(#ffffff,#999999); /* Standard syntax (must be last) */
   height: 500px;
   .contact {
-    width: 70%;
+    width: 80%;
+    max-width: 800px;
     margin: auto;
     a {
       text-decoration: none;
