--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -30,9 +30,12 @@
         </div>
       </a>
       <div ng-show="is_touch_device" class="touchOnlyIcons" >
-        <a href="https://twittersearchmap.herokuapp.com/"><span class="glyphicon glyphicon-link" ng-show="toolBar1"></span></a>
-        <span class="glyphicon glyphicon-remove" ng-show="toolBar1" ng-click="toolBar1 = false; infoSign1 = false; introShow1 = false"></span>
-        <span class="glyphicon glyphicon-info-sign" ng-hide="infoSign1" ng-click="toolBar1 = true; infoSign1 = true; introShow1 = true"></span>
+        <!-- <a href="https://twittersearchmap.herokuapp.com/"><span class="glyphicon glyphicon-link" ng-show="toolBar1"></span></a>
+        <span class="glyphicon glyphicon-remove" ng-show="toolBar1" ng-click="toolBar1 = false; infoSign1 = false; introShow1 = false"></span> -->
+        <!-- <span class="glyphicon glyphicon-info-sign" ng-hide="infoSign1" ng-click="toolBar1 = true; infoSign1 = true; introShow1 = true"></span> -->
+        <a href="https://twittersearchmap.herokuapp.com/"><i class="fa fa-link" aria-hidden="true" ng-show="toolBar1"></i></a>
+        <i class="fa fa-times" aria-hidden="true" ng-show="toolBar1" ng-click="toolBar1 = false; infoSign1 = false; introShow1 = false"></i>
+        <i class="fa fa-info" aria-hidden="true" ng-hide="infoSign1" ng-click="toolBar1 = true; infoSign1 = true; introShow1 = true"></i>
       </div>
     </div>
     <div flex="33" flex-sm="50" flex-xs="100" class="projectsDiv ">
@@ -47,9 +50,12 @@
       </a>
 
       <div ng-show="is_touch_device" class="touchOnlyIcons">
-        <a href="https://angularpizzaplanet.herokuapp.com/"><span class="glyphicon glyphicon-link" ng-show="toolBar2"></span></a>
+        <!-- <a href="https://angularpizzaplanet.herokuapp.com/"><span class="glyphicon glyphicon-link" ng-show="toolBar2"></span></a>
         <span class="glyphicon glyphicon-remove" ng-show="toolBar2" ng-click="toolBar2 = false; infoSign2 = false; introShow2 = false"></span>
-        <span class="glyphicon glyphicon-info-sign" ng-hide="infoSign2" ng-click="toolBar2 = true; infoSign2 = true; introShow2 = true"></span>
+        <span class="glyphicon glyphicon-info-sign" ng-hide="infoSign2" ng-click="toolBar2 = true; infoSign2 = true; introShow2 = true"></span> -->
+        <a href="https://angularpizzaplanet.herokuapp.com/"><i class="fa fa-link" aria-hidden="true" ng-show="toolBar2"></i></a>
+        <i class="fa fa-times" aria-hidden="true" ng-show="toolBar2" ng-click="toolBar2 = false; infoSign2 = false; introShow2 = false"></i>
+        <i class="fa fa-info" aria-hidden="true" ng-hide="infoSign2" ng-click="toolBar2 = true; infoSign2 = true; introShow2 = true"></i>
       </div>
 
     </div>
@@ -65,9 +71,12 @@
       </a>
 
       <div ng-show="is_touch_device" class="touchOnlyIcons">
-        <a href="https://hirejing.herokuapp.com/#/"><span class="glyphicon glyphicon-link" ng-show="toolBar3"></span></a>
+        <!-- <a href="https://hirejing.herokuapp.com/#/"><span class="glyphicon glyphicon-link" ng-show="toolBar3"></span></a>
         <span class="glyphicon glyphicon-remove" ng-show="toolBar3" ng-click="toolBar3 = false; infoSign3 = false; introShow3 = false"></span>
-        <span class="glyphicon glyphicon-info-sign" ng-hide="infoSign3" ng-click="toolBar3 = true; infoSign3 = true; introShow3 = true"></span>
+        <span class="glyphicon glyphicon-info-sign" ng-hide="infoSign3" ng-click="toolBar3 = true; infoSign3 = true; introShow3 = true"></span> -->
+        <a href="https://hirejing.herokuapp.com/#/"><i class="fa fa-link" aria-hidden="true" ng-show="toolBar3"></i></a>
+        <i class="fa fa-times" aria-hidden="true" ng-show="toolBar3" ng-click="toolBar3 = false; infoSign3 = false; introShow3 = false"></i>
+        <i class="fa fa-info" aria-hidden="true" ng-hide="infoSign3" ng-click="toolBar3 = true; infoSign3 = true; introShow3 = true"></i>
       </div>
     </div>
 
