--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -3,7 +3,7 @@
     <div class="headline">
       <h1>Hello & Welcome</h1>
     </div>
-    <div class="content delayed" ng-show="showRestPage">
+    <div class="content fade-in" >
       <p>
         My name Jing Wait. I am an aspiring full stack web developer who loves living in browers' world.
       </p>
@@ -17,7 +17,7 @@
     </div>
   </div>
 
-  <div layout="row" layout-wrap class="projectsWrap delayed" ng-show="showRestPage">
+  <div layout="row" layout-wrap class="projectsWrap fade-in" >
   <!-- <div layout="row" layout-wrap layout-xs="column" layout-margin class=""> -->
     <div flex="33" flex-sm="50" flex-xs="100" class="projectsDiv">
       <a  href="https://twittersearchmap.herokuapp.com/">
@@ -97,18 +97,18 @@
   </div>
 
 <!-- //footer where stay social -->
-  <div class="footer delayed" layout='column' ng-show="showRestPage">
-    <div class="contact" layout="row" layout-wrap>
-      <div class="" flex='25' flex-xs='50'>
+  <div class="footer fade-in" layout='column' >
+    <div class="contact" layout="row" layout-wrap layout-align="center center">
+      <div class="" flex='25' flex-xs='50' layout="column" layout-align="center center">
         <a href="mailto:jingzhaowait@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
       </div>
-      <div class="" flex='25' flex-xs='50'>
+      <div class="" flex='25' flex-xs='50' layout="column" layout-align="center center">
         <a href="https://github.com/lovedoodle"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
       </div>
-      <div class="" flex='25' flex-xs='50'>
+      <div class="" flex='25' flex-xs='50' layout="column" layout-align="center center">
         <a href="https://www.instagram.com/jing.wait/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
       </div>
-      <div class="" flex='25' flex-xs='50'>
+      <div class="" flex='25' flex-xs='50' layout="column" layout-align="center center">
         <a href="https://twitter.com/JingWait"><i class="fa fa-twitter" aria-hidden="true"></i></a>
       </div>
     </div>
