--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -23,9 +23,9 @@
     <a href="https://hirejing.herokuapp.com/#/">
       <img src="./images/stories.png" alt="" />
       <div ng-class="{intro: !is_touch_device, introTouchDeviceHide: is_touch_device, introTouchDeviceShow: is_touch_device && introShow3}">
-        <h2>Angular Material Portfolio</h2>
+        <h3>Angular Material Portfolio</h3>
         <p>
-          A responsive portfolio site done with the Angular Material framework.
+          A responsive portfolio site done with the Angular Material framework and CSS3 Animation.
         </p>
       </div>
     </a>
@@ -44,7 +44,7 @@
     <a href="https://angularpizzaplanet.herokuapp.com/">
       <img src="./images/pizza.png" alt="" />
       <div  ng-class="{intro: !is_touch_device, introTouchDeviceHide: is_touch_device, introTouchDeviceShow: is_touch_device && introShow2}">
-        <h2>Pizza Menu</h2>
+        <h3>Pizza Menu</h3>
         <p>
           A pet project I did with Yeoman/Angular practicing two-way data binding, inline editing and data persistence with MongoDB .
         </p>
@@ -66,7 +66,7 @@
       <a  href="https://twittersearchmap.herokuapp.com/">
         <img src="./images/twittersearch.png" alt="" />
         <div ng-class="{intro: !is_touch_device, introTouchDeviceHide: is_touch_device, introTouchDeviceShow: is_touch_device && introShow1}">
-          <h2>Twitter Search API</h2>
+          <h3>Twitter Search API</h3>
           <p>
             Features include showing tweets on Google map and D3 bubble chart of trending tweets and topics.
           </p>
@@ -87,7 +87,7 @@
     <!-- <div flex="33" flex-sm="50" flex-xs="100" class="projectsDiv">
       <img src="./images/pawesome.png" alt="" />
       <div ng-class="{intro: !is_touch_device, introTouchDeviceHide: is_touch_device, introTouchDeviceShow: is_touch_device && introShow4}">
-        <h2>Pawesome Care</h2>
+        <h3>Pawesome Care</h3>
         <p>
           Rails app
         </p>
